@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1.69
-Date: 2007-12-07
+Date: 2007-12-08
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
