@@ -12,6 +12,7 @@
 	grid=TRUE,
 	col.grid="lightgray",
 	coastline=NULL,
+	levels = NA,
 	\dots)
 }
 \arguments{
@@ -22,11 +23,11 @@
   \item{grid}{if \code{TRUE}, grid lines will be drawn on plots.}
   \item{col.grid}{color of grid lines.}
   \item{coastline}{if supplied, this is a \code{coastline} object, to be used in a station map}
+  \item{levels}{if supplied, and if only a single panel is being plotted, this will be the levels to be used for contours.}
   \item{\dots}{optional arguments passed to plotting functions, e.g. using
      \code{labcex=1} will increase the size of contour labels.  Probably the most
-common use, though, is to specify contours for individually plotted fields, e.g. 
-\code{plot.section(sectoin, field="temperature", levels=seq(0,30,1))} to
-get temperature contours from 0 to 30C in intervals of 1C.}
+common use, though, is to specify contours for individually plotted fields, e.g.  \code{plot.section(section, field="temperature", levels=seq(0,30,1))} gives
+temperature contours from 0 to 30C in intervals of 1C.}
 }
 \details{
 Creates a summary plot for a CTD section. If a \code{field} is supplied, then just that single
